# CRUD-REGISTRO-CINE

./: CMakeLists.txt  desktop.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registro.h
